# RecommenderUniversal

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mf_model.pkl  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci.yml
examples/: run_matrix_factorization.py  run_pipeline.py
examples/config/: mf_config.json
examples/test_data/: ratings.csv  test.csv
libenv/: pyvenv.cfg
recommender_universal/: cli.py
recommender_universal/data/: pipeline.py  schema.py
recommender_universal/data/connectors/: __init__.py  avro.py  base.py  csv.py  json.py  parquet.py  postgres.py  s3.py  sqlite.py
recommender_universal/data/transforms/: base.py  numerical.py
recommender_universal/evaluation/: batch_eval.py  metrics.py
recommender_universal/models/: base.py  registry.py
recommender_universal/models/advanced/: matrix_factorization.py
recommender_universal/models/baseline/: top_popular.py
recommender_universal/models/registry/: __init__.py  base.py  decorators.py  discover.py  factory.py
recommender_universal/utils/: hello.py  logging.py
tests/: test_dummy.py
tests/cli/: test_cli.py
tests/connectors/: test_connectors.py
tests/data/: test_connectors.py  test_pipeline.py  test_schema.py  test_transforms.py
tests/evaluation/: test_metrics.py  test_stratified.py
tests/models/: test_config_loader.py  test_matrix_factorization.py  test_registry.py  test_save_load.py  test_save_load_mf.py  test_save_load_versioned.py  test_top_popular.py
