[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "recommender_universal"
version = "0.1.0"
description = "A recommendation system library"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["recommender_universal"]

[tool.black]
line-length = 88

[project.optional-dependencies]
dev = ["pytest", "black", "mypy", "flake8", "coverage"]

